--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6757,4 +6757,30 @@ button.close {
     display: none !important;
   }
 }
+
+.fa-twitter:hover {
+  background: #4099FF;
+  color: #FFFFFF;
+  padding: 0.05em 0.07em;
+  }
+
+.social-icons .fa {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: #FFF;
+  color: rgba(255, 255, 255, 0.8);
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.social-icons.icon-circle .fa{ 
+  border-radius: 50%;
+}
 /*# sourceMappingURL=bootstrap.css.map */
+
+
